test/lit/pto/tinsert_verify_a5_invalid_loc.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module attributes {"pto.target_arch" = "a5"} {
  func.func @tinsert_a5_invalid_loc() {
    %c0 = arith.constant 0 : index

    %src = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %dst = pto.alloc_tile : !pto.tile_buf<loc=acc, dtype=f32, rows=32, cols=32, v_row=32, v_col=32, blayout=col_major, slayout=row_major, fractal=512, pad=0>

    pto.tinsert ins(%src, %c0, %c0 : !pto.tile_buf<loc=vec, dtype=f32, rows=32, cols=32, v_row=32, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>, index, index)
               outs(%dst : !pto.tile_buf<loc=acc, dtype=f32, rows=32, cols=32, v_row=32, v_col=32, blayout=col_major, slayout=row_major, fractal=512, pad=0>)
    return
  }
}

// CHECK: error: 'pto.tinsert' op expects A5 tinsert to use a supported src/dst loc pair: acc->mat, acc->vec, vec->mat, or vec->vec
